--- a/demo/AndroidManifest.xml
+++ b/demo/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mani.view.demo"
+    package="com.mani.staggeredview.demo"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -7,6 +7,9 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
 
+	<uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -14,7 +17,7 @@
         android:theme="@style/AppTheme" >
         
         <activity
-            android:name=".TestActivity"
+            android:name="com.mani.staggeredview.demo.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
