--- a/demo/AndroidManifest.xml
+++ b/demo/AndroidManifest.xml
@@ -19,8 +19,7 @@
         
         <activity
             android:name="com.mani.staggeredview.demo.MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
